--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -285,43 +285,29 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:id="@+id/more_prods"
-                    android:layout_height="135dp">
+                    android:layout_height="wrap_content">
 
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content">
 
-                        <ImageView
-                            android:id="@+id/imageView5"
-                            android:layout_width="100dp"
-                            android:layout_height="0dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginTop="8dp"
-                            android:src="@drawable/more_products"
-                            app:layout_constraintBottom_toTopOf="@+id/textView5"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.5"
-                            app:layout_constraintVertical_weight="7"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <TextView
-                            android:id="@+id/textView5"
+                        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+                            android:id="@+id/adView_main2"
                             android:layout_width="wrap_content"
-                            android:layout_height="0dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:layout_marginEnd="8dp"
-                            android:layout_marginStart="8dp"
-                            android:text="Products You May like"
-                            android:textSize="19sp"
-                            android:gravity="center"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.5"
-                            app:layout_constraintVertical_weight="3"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+                            android:layout_marginTop="8dp"
+                            ads:adSize="LARGE_BANNER"
+                            ads:adUnitId="@string/admob_banner_id"
+                            ads:layout_constraintBottom_toTopOf="@+id/imageView7"
+                            ads:layout_constraintEnd_toEndOf="parent"
+                            ads:layout_constraintHorizontal_bias="0.5"
+                            ads:layout_constraintVertical_weight="7"
+                            ads:layout_constraintStart_toStartOf="parent"
+                            ads:layout_constraintTop_toTopOf="parent" >
+
+                        </com.google.android.gms.ads.AdView>
 
                         <ImageView
                             android:id="@+id/imageView7"
@@ -333,10 +319,10 @@
                             android:layout_marginTop="8dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="1.0"
+                            app:layout_constraintHorizontal_bias="0.5"
+                            app:layout_constraintVertical_weight="3"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="1.0"
+                            app:layout_constraintTop_toBottomOf="@+id/adView_main2"
                             app:srcCompat="@drawable/copyright" />
                     </android.support.constraint.ConstraintLayout>
                 </android.support.v7.widget.CardView>
